force-app/main/default/objects/Exception_Log__c/fields/Business_Function_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Function_Name__c</fullName>
    <label>Business Function Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>