force-app/main/default/objects/Exception_Log__c/fields/Is_Admin_Notified__c.field-meta.xml
<CustomField>
    <fullName>Is_Admin_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Admin Notified ?</label>
    <type>Checkbox</type>
</CustomField>