force-app/main/default/objects/Exception_Log__c/fields/Is_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Case Created ?</label>
    <type>Checkbox</type>
</CustomField>