force-app/main/default/objects/Exception_Log__c/fields/Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_User__c</fullName>
    <label>Logged in User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>